--- a/StarRating/StarRating/Base.lproj/Main.storyboard
+++ b/StarRating/StarRating/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="azU-x7-SLM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-159" y="184"/>
+            <point key="canvasLocation" x="-159.42028985507247" y="183.48214285714286"/>
         </scene>
     </scenes>
 </document>
