--- a/Star Rating/Star Rating/Base.lproj/Main.storyboard
+++ b/Star Rating/Star Rating/Base.lproj/Main.storyboard
@@ -31,13 +31,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r59-c6-emn" customClass="CustomControl" customModule="Star_Rating" customModuleProvider="target">
+                            <view verifyAmbiguity="ignoreSizes" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r59-c6-emn" customClass="CustomControl" customModule="Star_Rating" customModuleProvider="target">
                                 <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="updateRating:" destination="BYZ-38-t0r" eventType="valueChanged" id="yhZ-Wk-5xL"/>
+                                </connections>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="r59-c6-emn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="IXs-le-dbd"/>
+                            <constraint firstItem="r59-c6-emn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kec-pJ-ec1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="mNC-A7-GV7"/>
